# mipt_contests

./: .gitignore  README.md
C++_sem_1/contest_1/solutions/: B.cpp  D.cpp  G.cpp
C++_sem_1/contest_10/: readme.md
C++_sem_1/contest_10/solutions/: B.cpp  D.cpp
C++_sem_1/contest_11/: readme.md
C++_sem_1/contest_11/solutions/: C.cpp
C++_sem_1/contest_12/: readme.md
C++_sem_1/contest_12/solutions/: B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
C++_sem_1/contest_13/solutions/: A.cpp  B.cpp  C.cpp
C++_sem_1/contest_14/: readme.md
C++_sem_1/contest_14/solutions/: A.cpp
C++_sem_1/contest_2/: readme.md
C++_sem_1/contest_2/solutions/: E.cpp  H.cpp  J.cpp  K.cpp  L.cpp
C++_sem_1/contest_3/: readme.md
C++_sem_1/contest_3/solutions/: B.cpp  C.cpp  E.cpp  F.cpp  G.cpp  H.cpp
C++_sem_1/contest_4/solutions/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
C++_sem_1/contest_5/solutions/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp
C++_sem_1/contest_6/: readme.md
C++_sem_1/contest_6/solutions/: B.cpp  C.cpp  D.cpp
C++_sem_1/contest_7/solutions/: A.cpp  B.cpp  C.cpp  D.cpp
C++_sem_1/contest_8/: readme.md
C++_sem_1/contest_8/solutions/: B.cpp  (+4 more)
C++_sem_1/contest_9/: readme.md
C++_sem_2/contest_1/: readme.md
C++_sem_2/contest_10/: readme.md
C++_sem_2/contest_11/: readme.md
C++_sem_2/contest_2/: readme.md
C++_sem_2/contest_3/: readme.md
C++_sem_2/contest_4/: readme.md
C++_sem_2/contest_5/: readme.md
C++_sem_2/contest_6/: readme.md
C++_sem_2/contest_7/: readme.md
C++_sem_2/contest_8/: readme.md
C++_sem_2/contest_9/: readme.md
IT_tech_4_sem/task-testing-cpp/: CMakeLists.txt  README.md  build.sh
first_sem_C++/contest_1/: readme.md
first_sem_C++/contest_13/: readme.md
first_sem_C++/contest_4/: readme.md
first_sem_C++/contest_5/: readme.md
first_sem_C++/contest_7/: readme.md
python_sem_3/contest_1/: readme.md
python_sem_3/contest_2/: readme.md
python_sem_3/contest_3/: readme.md
python_sem_3/contest_final/: readme.md
task-cmake/: CMakeLists.txt  README.md
task-cmake/A/: preparing.py
task-cmake/B/: CMakeLists.txt  lib.cpp  lib.h
task-cmake/C/: CMakeLists.txt  main.cpp  main.h  main_test.cpp  main_test.h  task_A.cpp  task_A.h  task_B.cpp  task_B.h
task-docker/cmake-with-flask/: Dockerfile
task-testing-cpp/: .gitignore  README.md
task0/: README.md
task1/: run.sh
(+100 files in other folders)
